init update, notebook check and linting

--- a/notebooks/slurm/slurm.ipynb
+++ b/notebooks/slurm/slurm.ipynb
@@ -57,12 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The `job` module contains the following function `squeue`, `job`, `max_resources_per_node`, `scancel`,  which allows us to create and operate the Slurm Job"
+    "##### The `job` module contains the following functions: `squeue`, `job`, `max_resources_per_node`, `scancel`, which allows us to create and operate the Slurm Job"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `slurm.job()` allows to create a job in the slurm queue on levante. Some options are available."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +114,18 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:36513 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:33807 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 32937 instead\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -120,12 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### We can check the status of created Job in the queue using the function `squeue()`"
+    "We can check the status of created Job in the queue using the function `squeue()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n",
-      "           4945818   compute dask-wor  b382267 PD       0:00      1 (Priority)\n"
+      "           5233510   compute dask-wor  b382289 PD       0:00      1 (Priority)\n"
      ]
     },
     {
@@ -142,7 +160,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,20 +174,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### By default, the Job has the following attributes:\n",
-    " - cores    = 1, \n",
-    " - memory   = \"10 GB\", \n",
-    " - queue    = \"compute\", \n",
-    " - walltime = '02:30:00', \n",
-    " - jobs     = 1\n",
+    "By default, the Job has the following attributes:\n",
+    "\n",
+    "- `exclusive=False`: If True, the job will be submitted asking for exclusive access to the node.\n",
+    "- `max_resources=False`: If True, the job will be submitted asking for the maximum resources available on the node.\n",
+    "- `cores=1`: number of cores per socket.\n",
+    "- `memory=\"10 GB\"`: real memory required per node.\n",
+    "- `queue=\"compute\"`: queue/partition to which SLURM submit the job.\n",
+    "- `walltime=\"02:30:00\"`: duration of the allocation.\n",
+    "- `jobs=1`: factor of assignment scaling across multiple nodes.\n",
+    "- `account=bb1153`: account that submits the job. It is the project id on levante.\n",
+    "- `path_to_output=\".\"`: path where log, err and output files are stored.\n",
     "\n",
     " \n",
-    "##### If you want to use a different amount of cores, memory, wall time, jobs, or a different queue, you can specify it as an argument of function:"
+    "If you want to use a different amount of cores, memory, wall time, jobs, or a different queue, you can specify it as an argument of function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +211,7 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:38555 --nthreads 2 --nworkers 4 --memory-limit 11.64GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:40169 --nthreads 2 --nworkers 4 --memory-limit 11.64GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     },
@@ -196,15 +219,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 33613 instead\n",
+      "Hosting the HTTP server on port 40665 instead\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "slurm.job(cores=8, memory=\"50 GB\", queue = \"interactive\", walltime='00:30:00', jobs=1)"
+    "slurm.job(cores=8, memory=\"50 GB\", queue=\"interactive\", walltime='00:30:00', jobs=1)"
    ]
   },
   {
@@ -225,9 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 45309 instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -246,18 +279,8 @@
       "#SBATCH --get-user-env\n",
       "#SBATCH --exclusive\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:44791 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:34597 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 36317 instead\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -270,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Important! "
+    "## Important! "
    ]
   },
   {
@@ -278,12 +301,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The exclusive argument DOES NOT automatically provide us the maximum available memory, number of cores, and walltime! "
+    "The `exclusive` argument DOES NOT automatically provide us the maximum available memory, number of cores, and walltime!\n",
+    "It only provide you the exclusive usage of the node, meaning that no other job can run at the same time on the same node."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +328,7 @@
       "#SBATCH --get-user-env\n",
       "#SBATCH --exclusive\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:40937 --nthreads 16 --nworkers 16 --memory-limit 29.10GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:42651 --nthreads 16 --nworkers 16 --memory-limit 29.10GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     },
@@ -312,9 +336,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 45391 instead\n",
+      "Hosting the HTTP server on port 36309 instead\n",
       "  warnings.warn(\n"
      ]
     }
@@ -336,12 +360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The function has an argument `max_resources_per_node`, which is False by default. If we set the argument to True, the number of cores, memory, and walltime will equal the maximum number of cores, memory, and walltime!"
+    "The function has an argument `max_resources_per_node`, which is `False` by default. If we set the argument to `True`, the number of cores, memory, and walltime will equal the maximum allowed by the selected queue/partition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +384,7 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:46699 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:38707 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     },
@@ -368,9 +392,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 46313 instead\n",
+      "Hosting the HTTP server on port 46233 instead\n",
       "  warnings.warn(\n"
      ]
     }
@@ -384,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### With the argument `max_resources_per_node=True`, the function `max_resources_per_node()` automatically extracts the following information about the resources in any queue:\n",
+    "With the argument `max_resources_per_node=True`, the function `max_resources_per_node()` automatically extracts the following information about the resources in any queue:\n",
     "\n",
     " - Size of memory per node in Gigabytes: `max_memory`, \n",
     "\n",
@@ -404,12 +428,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### For example, "
+    "The function can be also used alone to have info about a specific queue/partition.\n",
+    "For example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +443,7 @@
        "('251.3671875 GB', '8:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +463,7 @@
        "('502.9296875 GB', '12:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Redirecting the SLURM output to /any/path/you/want"
+    "### 2.4 Redirecting the SLURM output to `/any/path/you/want`"
    ]
   },
   {
@@ -460,11 +485,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Slurm Job writing by default\n",
+    "Slurm Job writes by default\n",
     "    - the errors into `./slurm/logs` directory \n",
     "    - the output into `./slurm/output/` directory\n",
     "\n",
-    "##### If folders `/slurm`,  `/slurm/output`,  `/slurm/logs` do not exist, the function will create them automatically. "
+    "If folders `/slurm`,  `/slurm/output`,  `/slurm/logs` do not exist, the function will create them automatically. "
    ]
   },
   {
@@ -472,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### But user can specify the path to redirect the SLURM output from the currect folder to `/any/other/folder/` "
+    "The user can specify a custom path to redirect the SLURM outputs with the `path_to_output` option:"
    ]
   },
   {
@@ -497,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### You need to change the project name if you want to create the Slurm Job on Lumi with the function `job.` Currently, it  is `account=\"bb1153\"`"
+    "You may need to change the account name if you want to create the Slurm Job on Lumi with the function `job()`. Currently on levante, it  is `account=\"bb1153\"` and it is valid for the whole project."
    ]
   },
   {
@@ -506,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slurm.job(account=='Your_Lumi_account_name')"
+    "slurm.job(account='Your_Lumi_account_name')"
    ]
   },
   {
@@ -594,13 +619,6 @@
    "source": [
     "slurm.squeue()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -619,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
