--- a/notebooks/slurm/slurm.ipynb
+++ b/notebooks/slurm/slurm.ipynb
@@ -15,14 +15,6 @@
    "source": [
     "## Structure\n",
     "\n",
-    "0. [Install the following:]()\n",
-    "\n",
-    "    - [dask]() (conda)\n",
-    "\n",
-    "    - [dask_jobqueue]() (pip)\n",
-    "\n",
-    "    - [os, re]()\n",
-    "\n",
     "1. [Importing the job module](#1-importing-the-job-module)\n",
     "\n",
     "2. [Creating the Slurm Job on LEVANTE](#2-creating-the-slurm-job-on-levante)\n",
@@ -57,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The `job` module contains the following functions: `squeue`, `job`, `max_resources_per_node`, `scancel`, which allows us to create and operate the Slurm Job"
+    "The `job` module contains the following functions: `squeue`, `job`, `max_resources_per_node`, `scancel`, which allows us to create and operate the Slurm Job"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "#!/usr/bin/env bash\n",
+      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 39323 instead\n",
+      "  warnings.warn(\n",
+      "2023-05-18 16:01:13 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p compute\n",
@@ -114,18 +113,8 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:33807 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:45835 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 32937 instead\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -143,15 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n",
-      "           5233510   compute dask-wor  b382289 PD       0:00      1 (Priority)\n"
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "5234111    1     1     PD         dask-worker          0:00       N/A                  (null)               compute              10G                 \n"
      ]
     },
     {
@@ -160,13 +149,30 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "slurm.squeue()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To cancel all the jobs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slurm.scancel()"
    ]
   },
   {
@@ -192,14 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "#!/usr/bin/env bash\n",
+      "2023-05-18 16:02:28 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 16:02:28 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 16:02:28 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 33993 instead\n",
+      "  warnings.warn(\n",
+      "2023-05-18 16:02:28 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p interactive\n",
@@ -211,23 +224,58 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:40169 --nthreads 2 --nworkers 4 --memory-limit 11.64GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:33661 --nthreads 2 --nworkers 4 --memory-limit 11.64GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 40665 instead\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "slurm.job(cores=8, memory=\"50 GB\", queue=\"interactive\", walltime='00:30:00', jobs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "5234123    24    1     R          dask-worker          0:10       2023-05-18T16:02:29  (null)               interactive          47G                 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.squeue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-18 16:02:56 :: slurm :: INFO     -> Cancelling all user jobs in the queue\n"
+     ]
+    }
+   ],
+   "source": [
+    "slurm.scancel(loglevel=\"INFO\")"
    ]
   },
   {
@@ -243,29 +291,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The function has an argument `exclusive`, which is False by default.  If we set the argument to True, we will get exclusive access to the node.\n"
+    "The function has an argument `exclusive`, which is False by default.  If we set the argument to True, we will get exclusive access to the node.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-05-18 16:03:58 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 16:03:58 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 16:03:58 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
       "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 45309 instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#!/usr/bin/env bash\n",
+      "Hosting the HTTP server on port 44411 instead\n",
+      "  warnings.warn(\n",
+      "2023-05-18 16:03:58 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p compute\n",
@@ -279,13 +324,58 @@
       "#SBATCH --get-user-env\n",
       "#SBATCH --exclusive\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:34597 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:43577 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     }
    ],
    "source": [
     "slurm.job(exclusive=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "5234135    256   1     R          dask-worker          0:13       2023-05-18T16:04:06  (null)               compute              10G                 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.squeue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-18 16:04:44 :: slurm :: INFO     -> Cancelling the job with ID: 5234135\n"
+     ]
+    }
+   ],
+   "source": [
+    "slurm.scancel(Job_ID=5234135,loglevel=\"INFO\")"
    ]
   },
   {
@@ -307,14 +397,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "#!/usr/bin/env bash\n",
+      "2023-05-18 16:04:56 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 16:04:56 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 16:04:56 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 35239 instead\n",
+      "  warnings.warn(\n",
+      "2023-05-18 16:04:56 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p interactive\n",
@@ -328,23 +425,50 @@
       "#SBATCH --get-user-env\n",
       "#SBATCH --exclusive\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:42651 --nthreads 16 --nworkers 16 --memory-limit 29.10GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:38817 --nthreads 16 --nworkers 16 --memory-limit 29.10GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 36309 instead\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "slurm.job(exclusive=True, cores=256, memory=\"500 GB\", queue = \"interactive\", walltime='12:00:00', jobs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "5234140    256   1     R          dask-worker          0:07       2023-05-18T16:04:57  (null)               interactive          466G                \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.squeue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slurm.scancel()"
    ]
   },
   {
@@ -365,14 +489,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "#!/usr/bin/env bash\n",
+      "2023-05-18 16:05:28 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 16:05:28 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 16:05:28 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 46847 instead\n",
+      "  warnings.warn(\n",
+      "2023-05-18 16:05:29 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
       "#SBATCH -p compute\n",
@@ -384,23 +515,50 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:38707 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:33263 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 46233 instead\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "slurm.job(max_resources=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
+      "5234147    256   1     R          dask-worker          0:02       2023-05-18T16:05:35  (null)               compute              235G                \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slurm.squeue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slurm.scancel()"
    ]
   },
   {
@@ -434,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +601,7 @@
        "('251.3671875 GB', '8:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +621,7 @@
        "('502.9296875 GB', '12:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Checking the status of canceled Job"
+    "##### Checking the status of Jobs"
    ]
   },
   {
