slurm package working on lumi as well

--- a/notebooks/slurm/slurm.ipynb
+++ b/notebooks/slurm/slurm.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "1. [Importing the job module](#1-importing-the-job-module)\n",
     "\n",
-    "2. [Creating the Slurm Job on LEVANTE](#2-creating-the-slurm-job-on-levante)\n",
+    "2. [Creating the Slurm Job](#2-creating-the-slurm-job)\n",
     "\n",
     "    2.1 [Creating the Job with manual selection of cores, memory, and walltime](#21-creating-the-job-with-manual-selection-of-cores-memory-and-walltime)\n",
     "\n",
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Creating the Slurm Job on LEVANTE"
+    "## 2. Creating the Slurm Job"
    ]
   },
   {
@@ -82,7 +82,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function `slurm.job()` allows to create a job in the slurm queue on levante. Some options are available."
+    "The function `slurm.job()` allows to create a job in the slurm queue. \n",
+    "It works both on Lumi and Levante.\n",
+    "Some options are available."
    ]
   },
   {
@@ -94,18 +96,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
-      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
-      "2023-05-18 16:01:12 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 39323 instead\n",
-      "  warnings.warn(\n",
-      "2023-05-18 16:01:13 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
+      "2023-05-18 18:17:39 :: create_folder :: WARNING  -> Folder ./slurm already exists\n",
+      "2023-05-18 18:17:39 :: create_folder :: WARNING  -> Folder ./slurm/logs already exists\n",
+      "2023-05-18 18:17:39 :: create_folder :: WARNING  -> Folder ./slurm/output already exists\n",
+      "2023-05-18 18:17:40 :: slurm :: WARNING  -> #!/usr/bin/env bash\n",
       "\n",
       "#SBATCH -J dask-worker\n",
-      "#SBATCH -p compute\n",
-      "#SBATCH -A bb1153\n",
+      "#SBATCH -p small\n",
+      "#SBATCH -A project_465000454\n",
       "#SBATCH -n 1\n",
       "#SBATCH --cpus-per-task=1\n",
       "#SBATCH --mem=10G\n",
@@ -113,7 +111,7 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/work/bb1153/b382289/mambaforge/envs/aqua/bin/python -m distributed.cli.dask_worker tcp://136.172.124.5:45835 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/users/nurissom/mambaforge/aqua/bin/python -m distributed.cli.dask_worker tcp://193.167.209.166:43903 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     }
@@ -140,7 +138,7 @@
      "output_type": "stream",
      "text": [
       "JOBID      CPUS  NODES ST         NAME                 TIME       START_TIME           DEPENDENCY           PARTITION            MIN_MEMORY          \n",
-      "5234111    1     1     PD         dask-worker          0:00       N/A                  (null)               compute              10G                 \n"
+      "3546304    2     1     R          dask-worker          0:05       2023-05-18T18:17:42  (null)               small                10G                 \n"
      ]
     },
     {
@@ -186,12 +184,23 @@
     "- `max_resources=False`: If True, the job will be submitted asking for the maximum resources available on the node.\n",
     "- `cores=1`: number of cores per socket.\n",
     "- `memory=\"10 GB\"`: real memory required per node.\n",
-    "- `queue=\"compute\"`: queue/partition to which SLURM submit the job.\n",
     "- `walltime=\"02:30:00\"`: duration of the allocation.\n",
     "- `jobs=1`: factor of assignment scaling across multiple nodes.\n",
-    "- `account=bb1153`: account that submits the job. It is the project id on levante.\n",
     "- `path_to_output=\".\"`: path where log, err and output files are stored.\n",
     "\n",
+    "The machine dependant default configurations are:\n",
+    "\n",
+    "### LUMI\n",
+    "- account=\"project_465000454\"\n",
+    "- queue=\"small\"\n",
+    "\n",
+    "### Levante\n",
+    "- account=\"bb1153\"\n",
+    "- queue=\"compute\"\n",
+    "\n",
+    "It is possible to specify the machine with `machine=levante` or `machine=lumi`, to access the correct defaults.\n",
+    "Otherwise the function will try to get your configuration file and extract the machine name.\n",
+    "It is possible also to specify the configuration folder with `configdir=\"/path/to/confgdir\"` to automatically extract the machine name.\n",
     " \n",
     "If you want to use a different amount of cores, memory, wall time, jobs, or a different queue, you can specify it as an argument of function:"
    ]
