the names of sections are added

--- a/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
+++ b/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
@@ -80,6 +80,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monthly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -116,6 +124,14 @@
    "outputs": [],
    "source": [
     "reader = Reader(model=\"MSWEP\", exp=\"past\",source=\"monthly\"  )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily"
    ]
   },
   {
@@ -234,6 +250,19 @@
     "reader = Reader(model=\"MSWEP\", exp=\"past\", source=\"daily_1979_1989\")\n",
     "reader = Reader(model=\"MSWEP\", exp=\"past\", source=\"daily_1990_1999\"  )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3hourly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
