3hourly MSWEP data added to example

--- a/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
+++ b/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
@@ -260,9 +260,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 17:36:14 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_3hourly_y1979.nc\n",
+      "2023-05-19 17:36:14 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-19 17:36:14 :: Reader :: WARNING  -> Source grid: /tmp/tmpu0lnfo14\n",
+      "2023-05-19 17:36:20 :: Reader :: WARNING  -> Success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y1979\"  )\n",
+    "MSWEP = reader.retrieve()\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 17:37:54 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_3hourly_y2000.nc\n",
+      "2023-05-19 17:37:54 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-19 17:37:54 :: Reader :: WARNING  -> Source grid: /tmp/tmp_ak3f7fi\n",
+      "2023-05-19 17:37:57 :: Reader :: WARNING  -> Success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y2000\"  )\n",
+    "MSWEP = reader.retrieve()\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 17:39:33 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_3hourly_y2020.nc\n",
+      "2023-05-19 17:39:33 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-19 17:39:33 :: Reader :: WARNING  -> Source grid: /tmp/tmpctqkhviy\n",
+      "2023-05-19 17:39:36 :: Reader :: WARNING  -> Success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y2020\"  )\n",
+    "MSWEP = reader.retrieve()\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
   },
   {
    "cell_type": "code",
