examples of mswep data load are updated

--- a/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
+++ b/notebooks/data_load/ERA5_and_MSWEP_load.ipynb
@@ -73,27 +73,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Monthly"
+    "### Monthly, Zarr"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4 seconds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-23 03:10:31 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_monthly_monthly.nc\n",
-      "2023-05-23 03:10:31 :: Reader :: WARNING  -> Attempting to generate it ...\n",
-      "2023-05-23 03:10:31 :: Reader :: WARNING  -> Source grid: /tmp/tmp7hola2_0\n",
-      "2023-05-23 03:10:35 :: Reader :: WARNING  -> Success!\n"
+      "2023-05-24 01:30:28 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_monthly_zarr.nc\n",
+      "2023-05-24 01:30:28 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-24 01:30:28 :: Reader :: WARNING  -> Source grid: /tmp/tmphs0ly43l\n",
+      "2023-05-24 01:30:30 :: Reader :: WARNING  -> Success!\n"
      ]
     }
    ],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"monthly\", source=\"monthly\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"monthly\", source=\"zarr\"  )\n",
+    "MSWEP = reader.retrieve()\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monthly, json"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30-40 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"monthly\", source=\"json\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -120,37 +155,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Daily, total"
+    "## Daily, Zarr "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"daily\"  )\n",
-    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+    "average is 10 seconds!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-23 02:56:51 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_daily_daily.nc\n",
-      "2023-05-23 02:56:51 :: Reader :: WARNING  -> Attempting to generate it ...\n",
-      "2023-05-23 02:56:51 :: Reader :: WARNING  -> Source grid: /tmp/tmpm_v5p8cp\n",
-      "2023-05-23 02:56:54 :: Reader :: WARNING  -> Success!\n"
+      "2023-05-24 01:31:24 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_daily_zarr.nc\n",
+      "2023-05-24 01:31:24 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-24 01:31:24 :: Reader :: WARNING  -> Source grid: /tmp/tmp2gm6m8bi\n",
+      "2023-05-24 01:31:28 :: Reader :: WARNING  -> Success!\n"
      ]
     }
    ],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"daily\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"zarr\"  )\n",
+    "MSWEP_fixed = reader.retrieve()\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MSWEP_fixed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily, json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"json\"  )\n",
+    "MSWEP_not_fixed = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "average is 50 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-24 01:32:48 :: Reader :: WARNING  -> Source areas file not found: /work/bb1153/b382075/nextgems/weights/cell_area_MSWEP_daily_json.nc\n",
+      "2023-05-24 01:32:48 :: Reader :: WARNING  -> Attempting to generate it ...\n",
+      "2023-05-24 01:32:48 :: Reader :: WARNING  -> Source grid: /tmp/tmpc_5s91p5\n",
+      "2023-05-24 01:32:51 :: Reader :: WARNING  -> Success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"json\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -169,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"y1979\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"json_1979\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -191,7 +281,7 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"y2020\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"daily\", source=\"json_2020\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -201,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3hourly"
+    "### 3hourly, json"
    ]
   },
   {
@@ -210,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"3hourly\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"json\"  )\n",
     "#MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -221,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y1979\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"json_1979\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -243,7 +333,7 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y2000\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"json_2000\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
@@ -265,7 +355,7 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"y2020\"  )\n",
+    "reader = Reader(model=\"MSWEP\", exp=\"3hourly\", source=\"json_2020\"  )\n",
     "MSWEP = reader.retrieve()\n",
     "MSWEP_not_fixed = reader.retrieve(fix=False)"
    ]
