--- a/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
+++ b/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +21,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "cat = catalogue()"
+    "cat = catalogue() "
    ]
   },
   {
