--- a/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
+++ b/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,7 +38,7 @@
     "source= 'interpolated_global_TS'\n",
     "reader = Reader(model = model_name, exp = exp_name, source=source) \n",
     "data = reader.retrieve()\n",
-    "data"
+    "data "
    ]
   },
   {
@@ -59,7 +60,7 @@
     "data=data.drop(\"ocpt\")\n",
     "data=data.coarsen(lat=30, lon=40).mean()  \n",
     "\n",
-    "# Renaming the Variables\n",
+    "# Renaming the Variables \n",
     "data=data.rename({\"salt\":\"so\"})\n",
     "data=data.rename({\"temp\":\"thetao\"})\n",
     "data=data.rename({\"depth\":\"lev\"})\n",
