--- a/notebooks/gribber/gribber.ipynb
+++ b/notebooks/gribber/gribber.ipynb
@@ -38,7 +38,10 @@
     "- `nprocs`: number of processors (default: `1`)\n",
     "- `replace`: replace existing files (default: `False`)\n",
     "\n",
-    "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment.  Please change the outdir if you want to try this notebook!"
+    "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment.  Please change the outdir if you want to try this notebook!\n",
+    "\n",
+    "Note that in this example the `datadir` is hard-coded to point to a small subset of GRIB files.\n",
+    "Note also that we're assuming that you downloaded AQUA in your `home` directory. If not, please change the `configdir` variable to point to `AQUA/config`."
    ]
   },
   {
@@ -48,7 +51,7 @@
    "outputs": [],
    "source": [
     "outdir = 'b382321'\n",
-    "default_dir = {'datadir': '/scratch/b/' + outdir + '/tco1279-orca025/nemo_deep/ICMGGc2',\n",
+    "default_dir = {'datadir': '/work/bb1153/b382289/grib-example/tco1279-orca025',\n",
     "               'tmpdir': '/scratch/b/' + outdir + '/gribscan',\n",
     "               'jsondir': '/work/bb1153/' + outdir + '/gribscan-json',\n",
     "               'configdir': '/home/b/' + outdir + '/AQUA/config'}\n"
@@ -65,23 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Data directory: /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> JSON directory: /work/bb1153/b382321/gribscan-json/tco1279-orca025\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Catalog directory: /home/b/b382321/AQUA/config\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Gribfile wildcard: ICMGG????+*\n",
-      "2023-05-17 16:54:40 :: gribber :: WARNING  -> Catalog file: /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
-      "2023-05-17 16:54:40 :: gribber :: WARNING  -> JSON file: /work/bb1153/b382321/gribscan-json/tco1279-orca025/atm2d.json\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if indices already exist...\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if JSON file already exists...\n",
-      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if catalog file already exists...\n",
-      "2023-05-17 16:54:40 :: gribber :: WARNING  -> Catalog file /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Data directory: /work/bb1153/b382289/grib-example/tco1279-orca025\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Catalog directory: /work/bb1153/b382289/AQUA/config\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Gribfile wildcard: ICMGG????+*\n",
+      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Catalog file: /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml\n",
+      "2023-05-25 17:59:10 :: gribber :: WARNING  -> JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if indices already exist...\n",
+      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Indices already exist.\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if JSON file already exists...\n",
+      "2023-05-25 17:59:10 :: gribber :: WARNING  -> JSON file already exists.\n",
+      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if catalog file already exists...\n",
+      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Catalog file /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
      ]
     }
    ],
@@ -99,33 +104,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-17 16:54:47 :: create_folder :: WARNING  -> Creating folder /scratch/b/b382321/gribscan/tco1279-orca025\n",
-      "2023-05-17 16:54:47 :: create_folder :: WARNING  -> Creating folder /work/bb1153/b382321/gribscan-json/tco1279-orca025\n",
-      "2023-05-17 16:54:47 :: gribber :: INFO     -> Creating symlinks...\n",
-      "2023-05-17 16:54:47 :: gribber :: INFO     -> Searching in /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2...\n",
-      "2023-05-17 16:54:47 :: gribber :: INFO     -> /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
-      "2023-05-17 16:54:47 :: gribber :: INFO     -> Creating GRIB indices...\n",
-      "usage: gribscan-index [-h] [-n [NPROCS]] GRIB [GRIB ...]\n",
-      "gribscan-index: error: the following arguments are required: GRIB\n",
-      "2023-05-17 16:55:15 :: gribber :: INFO     -> CompletedProcess(args=['gribscan-index', '-n', '1'], returncode=2)\n",
-      "2023-05-17 16:55:15 :: gribber :: INFO     -> Creating JSON file...\n",
-      "usage: gribscan-build [-h] [-o outdir] [--prefix template_prefix]\n",
-      "                      [-m magician]\n",
-      "                      GRIB.index [GRIB.index ...]\n",
-      "gribscan-build: error: the following arguments are required: GRIB.index\n",
-      "2023-05-17 16:55:17 :: gribber :: INFO     -> Block to be added to catalog file:\n",
-      "2023-05-17 16:55:17 :: gribber :: INFO     -> {'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382321/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
-      "2023-05-17 16:55:17 :: gribber :: WARNING  -> Source ICMGG_atm2d already exists in /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n",
-      "2023-05-17 16:55:17 :: gribber :: INFO     -> Block to be added to main catalog file:\n",
-      "2023-05-17 16:55:17 :: gribber :: INFO     -> {'tco1279-orca025': {'description': 'tco1279-orca025 data', 'driver': 'yaml_file_cat', 'args': {'path': '{{CATALOG_DIR}}/tco1279-orca025.yaml'}}}\n",
-      "2023-05-17 16:55:17 :: gribber :: WARNING  -> Source tco1279-orca025 already exists                    in /home/b/b382321/AQUA/config/levante/catalog/IFS/main.yaml. Skipping...\n"
+      "2023-05-25 17:59:19 :: create_folder :: WARNING  -> Folder /scratch/b/b382289/gribscan/tco1279-orca025 already exists\n",
+      "2023-05-25 17:59:19 :: create_folder :: WARNING  -> Folder /work/bb1153/b382289/gribscan-json/tco1279-orca025 already exists\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> Creating symlinks...\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> Searching in /work/bb1153/b382289/grib-example/tco1279-orca025...\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGG????+*\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000066 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000084 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000054 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000012 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000000 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000036 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000030 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000078 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000048 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000018 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000006 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000024 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000096 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000042 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000090 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000072 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000060 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> Block to be added to catalog file:\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> {'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
+      "2023-05-25 17:59:19 :: gribber :: WARNING  -> Source ICMGG_atm2d already exists in /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> Block to be added to main catalog file:\n",
+      "2023-05-25 17:59:19 :: gribber :: INFO     -> {'tco1279-orca025': {'description': 'tco1279-orca025 data', 'driver': 'yaml_file_cat', 'args': {'path': '{{CATALOG_DIR}}/tco1279-orca025.yaml'}}}\n",
+      "2023-05-25 17:59:19 :: gribber :: WARNING  -> Source tco1279-orca025 already exists                    in /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/main.yaml. Skipping...\n"
      ]
     }
    ],
@@ -149,12 +162,6 @@
    "source": [
     "In addition, the `Gribber` class can be used via a command line tool in `cli/gribber/cli_gribber.py`. This in an executable python script, which can be configured via a configuration yaml file (`--config configfile.yaml`), which must include the dictionary for the directories as well as the experiment details. A template for this configuration file can be found in `AQUA/cli/gribber/gribber_setup.tmpl`."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -173,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
